Fix white-space pre-wrap

--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -13,6 +13,10 @@ textarea {
     border-radius: 8px;
 }
 
+.email-body {
+    white-space: pre-wrap;
+}
+
 #button-row {
     padding-top: 5px;
 }
